--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,12 @@ img {
 h1 {
     font-family: 'Bai Jamjuree', sans-serif;
 font-family: 'K2D', sans-serif;
-font-family: 'Lato', sans-serif;
+
+
+
 }
 body {
-font-family: 'Charmonman', cursive;
+font-family: 'oswald', cursive;
 }
 h2 {
 font-family: 'Anton', sans-serif;
