--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,18 @@
 img {
     height: 175px;
 }
+img:hover {
+    height: 300px;
+    transition: height 2s;
+}
+
+ul:hover {
+    color:red;
+    transition: height 10s;
+}    
+    
+    
+
 h1 {
     font-family: 'Bai Jamjuree', sans-serif;
     font-family: 'K2D', sans-serif;
@@ -19,7 +31,6 @@ h2 {
 }
 h1{
     border:dashed;
-
 }
 body {
     background-image: url("http://blog.visme.co/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-08.jpg");
